# FastChat

./: .gitignore  pyproject.toml  requirements.txt
fastchat/: constants.py  logger.py
fastchat/model/: model_adapter.py
fastchat/prompt/: custom_prompt.py
fastchat/serve/: base_model_worker.py  gradio_web_server.py  lightllm_worker.py  mlc_worker.py  test_message.py  test_throughput.py  vllm_worker.py
tests/: README.md  locustfile_controller.py  locustfile_openai.py  random_question.py  test_openai_api_v2.py
