[tool.poetry]
name = "fastchat"
version = "0.1.0"
description = ""
authors = ["pengzhongchao <pengzhongchao@senseauto.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.1"
requests = "^2.32.3"
uvicorn = "^0.30.6"
torch = "^2.4.0"
transformers = "^4.44.0"
accelerate = "^0.33.0"
markdown2 = "^2.5.0"
nh3 = "^0.2.18"
sentencepiece = "^0.2.0"
safetensors = "^0.4.4"
pydantic = "^2.8.2"
aiohttp = "^3.10.3"
pydantic-settings = "^2.4.0"
shortuuid = "^1.0.13"
tiktoken = "^0.7.0"
prompt-toolkit = "^3.0.47"
protobuf = "^5.27.3"
vllm = "^0.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
